# bsonmatch

./: .gitignore  .gitmodules  CMakeLists.txt  PLAN.md  README.md
src/: bsoncompare.c  bsoncompare.h  mongoc-matcher-op-private.h  mongoc-matcher-op.c  mongoc-matcher.c  wpcre.c  wpcre.h
tests/: test_wpcre.c
